# tonic-protobuf

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: Cargo.toml  build.rs
examples/proto/: debugpb.proto
examples/src/: lib.rs
tonic-build-protobuf/: Cargo.toml
tonic-build-protobuf/src/: lib.rs
tonic-codec-protobuf/: Cargo.toml
tonic-codec-protobuf/src/: lib.rs
