[package]
name = "tonic-build-protobuf"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Neil Shen <overvenus@gmail.com>"]
repository = "https://github.com/overvenus/tonic-codec-protobuf"
description = "Codegen module of `tonic` gRPC implementation with rust-protobuf."
documentation = "https://docs.rs/tonic-build-protobuf"

[dependencies]
protobuf = "3"
protobuf-parse = "3"
tonic-build = "0.11"
bytes = "1.0"
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
heck = "0.5"

[package.metadata.docs.rs]
all-features = true
